# exchangecli

./: .gitignore  README.md  pyproject.toml
src/: rates.py
