[tool.poetry]
name = "exchangecli"
version = "0.1.0"
description = "cli tool to convert currencies and get rates"
authors = ["mojoee <47809126+mojoee@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
